namespace Core.DTOs;

public class ClassDTO
{
    public int Id { get; set; }
    public string Name { get; set; } = string.Empty;
    public string ClassCode { get; set; } = string.Empty;
    public List<StudentDTO>? Students { get; set; }
}
