namespace Core.DTOs;

public class CreateCourseDto
{
    public string Name { get; set; }
    public string Description { get; set; }
}