namespace Core.DTOs;

public class LoginDTO
{
    public string Email { get; set; } = string.Empty;
}
