namespace Core.DTOs;

public class UpdateCourseDto
{
    public string Name { get; set; }
    public string Description { get; set; }
}
