namespace Core.DTOs;

public class UpdateLearningOutcomeDto
{
    public int Id { get; set; }
    public string Name { get; set; }
    public string Description { get; set; }
    public string EndQualification { get; set; }
}