---
config:
  look: neo
  theme: redux
  layout: elk
  flowchart:
    nodeSpacing: 300
    rankSpacing: 100
---
classDiagram
direction LR
    class ControllerBase
    namespace Server.Controllers {
        class BaseApiController
        class CourseController
        class LearningOutcomeController
        class MaterialController
    class BaseApiController
        class PlanningController
    class CourseController
        class AuthController
    class LearningOutcomeController
        class ClassController
        class StudentController
        class GradeController
    }

    namespace Core.DTOs {
        class CourseDTO
        class CreateCourseDto
        class UpdateCourseDto
        class LearningOutcomeDto
        class CreateLearningOutcomeDto
        class UpdateLearningOutcomeDto
        class MaterialDTO
        class CreateMaterialDTO
        class UpdateMaterialDTO
        class PlanningDTO
        class LoginDTO
        class TeacherLoginDTO
        class ClassDTO
        class StudentDTO
        class GradeDTO
        class CreateGradeDTO
        class UpdateGradeDTO
    }
    BaseApiController --|> ControllerBase
    namespace Core.Interfaces.Services {
        class ICourseService
        class ILearningOutcomeService
        class IMaterialService
        class IPlanningService
        class IAuthService
        class IClassService
        class IStudentService
        class IGradeService
    }
    BaseApiController --|> Microsoft.AspNetCore.Mvc.ControllerBase
    CourseController --|> BaseApiController
    LearningOutcomeController --|> BaseApiController
    MaterialController --|> BaseApiController
    PlanningController --|> BaseApiController
    AuthController --|> BaseApiController
    ClassController --|> BaseApiController
    StudentController --|> BaseApiController
    GradeController --|> BaseApiController
    CourseController ..> ICourseService
    CourseController ..> ILearningOutcomeService
    CourseController ..> CourseDTO
    CourseController ..> CreateCourseDto
    CourseController ..> UpdateCourseDto

    LearningOutcomeController ..> ILearningOutcomeService
    LearningOutcomeController ..> LearningOutcomeDto
    LearningOutcomeController ..> CreateLearningOutcomeDto
    LearningOutcomeController ..> UpdateLearningOutcomeDto

    MaterialController ..> IMaterialService
    MaterialController ..> MaterialDTO
    MaterialController ..> CreateMaterialDTO
    MaterialController ..> UpdateMaterialDTO

    PlanningController ..> IPlanningService
    PlanningController ..> PlanningDTO

    AuthController ..> IAuthService
    AuthController ..> LoginDTO
    AuthController ..> TeacherLoginDTO

    ClassController ..> IClassService
    ClassController ..> ClassDTO

    StudentController ..> IStudentService
    StudentController ..> StudentDTO

    GradeController ..> IGradeService
    GradeController ..> GradeDTO
    GradeController ..> CreateGradeDTO
    GradeController ..> UpdateGradeDTO